k3s/freshrss/freshrss-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  namespace: freshrss  

spec:
  rules:
  - host: freshrss.carter2099.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freshrss
            port:
              number: 80
